<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pagamento_mensagem_inicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/instrucoes_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_mensagem_inicial" />

    <TextView
        android:id="@+id/pagamento_montante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/numero_cartao_hint"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_montante"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_validade_mes"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/validade_mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_cvv"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_validade_ano"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/validade_ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_cvv"
        app:layout_constraintStart_toEndOf="@id/pagamento_validade_mes"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvv"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_nome_portador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:digits="@string/digitos_permitidos"
        android:hint="@string/nome_portador_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_cvv"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/pagamento_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_laranja"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_portador"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_portador"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_portador" />


</android.support.constraint.ConstraintLayout>